<resources>
    <string name="editbtn56">Edit</string>
    <string name="name23">S.A.Tharaka </string>
    <string name="app_name">Bon-Apetit</string>
    <string name="home">Home</string>
    <string name="loginPgBusinessName">Bon-Appetit</string>
    <string name="btn_login">Login</string>
    <string name="btnSignUp">Sign up</string>
    <string name="addstock">Add Stock</string>
    <string name="Ingredient">Ingredients</string>
    <string name="qty">Quantity</string>
    <string name="btnAdd">Add</string>
    <string name="profiletopic">Customer Profile</string>
...
    <string name="chocolateCake">Chocolate Cake</string>
    <string name="brownie">Brownies</string>
    <string name="addRecipes">Add Recipes</string>
    <string name="recipeName">Recipe Name</string>
    <string name="recipeImage">Recipe Image</string>
    <string name="chooseFile">Choose File</string>
    <string name="submit">Submit</string>
    <string name="message1">Use + button to add more ingredients!</string>
    <string name="ingredient">Ingredient</string>
    <string name="amount">Amount</string>
    <string name="chooseIngredient">Choose Ingredient</string>
    <string name="method">Method</string>
    <string name="addRecipe">Add Recipe</string>
...
    <string name="basket">Basket</string>
    <string name="edit">edit</string>
    <string name="servins">2 servings</string>
    <string name="price">Rs.2300.00</string>
    <string name="price2">Rs.2600.00</string>
    <string name="total">Rs.4900.00</string>
    <string name="checkout">Check-Out</string>
    <string name="cancel">Cancel</string>
    <string name="editProfile">Edit Profile</string>
    <string name="cusname">S.A.Tharaka</string>
    <string name="name2">Full Name</string>
    <string name="email">tharaka@gmail.com</string>
    <string name="email2">Email</string>
...
