...
            android:background="@drawable/buttonsuccess"
            android:text="@string/view_ingredients"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/addTocart"
            android:layout_width="136dp"
            android:layout_height="50dp"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="547dp"
            android:background="@drawable/buttonsuccess"
            android:text="Add To Cart" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
